Cursos com letras maiusculas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-        <li>Nome do novo curso</li>
+        <li>Nome do novo Curso</li>
     </ul>
 </body>
 </html>
