--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant: Gerenciando máquinas virtuais</li>
+        <li>Vagrant</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: Infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
