--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible: Sua Infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-        <li>Nome do novo Curso</li>
+        <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
